--- a/home.css
+++ b/home.css
@@ -1,51 +1,127 @@
-body {
-  font-family: "Times New Roman","Arial",sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 20px;
-  margin: 0;
-  padding: 0;
-  background-color:#FA9A50;
-}
-
-.header {
-  height: 80px;
-  display: flex;
-  align-items: center;
-}
-
-.header li
+body 
 {
-  margin:20px;
-  padding:20px;
-  display:inline;
-}
-.header_h1 {
-  margin: 20px;
-  padding: 10px;
-  color: #424242;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color:lightblue;
 }
 
-.header_h1 img{
-  padding-top:50px;
-  width:150px;
-  height:150px;
+/* Full-width input fields */
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
 }
-.student_icon img {
-  padding-top:50px;
-  width:100px;
-  height:100px;
-  padding-left:50px;
-}
-.background-ribbon {
-  height: 200px;
+h2{
+    text-align:center;
 }
 
-.text-editor {
-  width: 60%;
-  padding: 40px 28px;
-  min-height: 600px;
-  background: #fff;
-  margin: 0 auto;
-  transform: translateY(-150px);
+/* Set a style for all buttons */
+button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    display
+}
+
+button:hover {
+    opacity: 0.8;
+}
+
+/* Extra styles for the cancel button */
+.cancelbtn {
+    width: auto;
+    padding: 10px 18px;
+    background-color: #f44336;
+}
+
+/* Center the image and position the close button */
+.imgcontainer {
+    text-align: center;
+    margin: 24px 0 12px 0;
+    position: relative;
+}
+
+img.avatar {
+    width: 25%;
+    border-radius: 50%;
+}
+
+.container {
+    padding: 16px;
+}
+
+.form {
+    background-color: #fefefe;
+    margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+}body 
+{
+    font-family: Arial, Helvetica, sans-serif;
+    background-color:lightblue;
+}
+
+/* Full-width input fields */
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+h2{
+    text-align:center;
+}
+
+/* Set a style for all buttons */
+button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    display
+}
+
+button:hover {
+    opacity: 0.8;
+}
+
+/* Extra styles for the cancel button */
+.cancelbtn {
+    width: auto;
+    padding: 10px 18px;
+    background-color: #f44336;
+}
+
+/* Center the image and position the close button */
+.imgcontainer {
+    text-align: center;
+    margin: 24px 0 12px 0;
+    position: relative;
+}
+
+img.avatar {
+    width: 25%;
+    border-radius: 50%;
+}
+
+.container {
+    padding: 16px;
+}
+
+.form {
+    background-color: #fefefe;
+    margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
 }
