--- a/home.css
+++ b/home.css
@@ -1,7 +1,7 @@
 body 
 {
     font-family: Arial, Helvetica, sans-serif;
-    background-color:lightblue;
+    background-color:#C8C8C8;
 }
 
 /* Full-width input fields */
@@ -64,7 +64,7 @@ img.avatar {
 }body 
 {
     font-family: Arial, Helvetica, sans-serif;
-    background-color:lightblue;
+    background-color:#C8C8C8;
 }
 
 /* Full-width input fields */
