--- a/otheruser.css
+++ b/otheruser.css
@@ -1,6 +1,39 @@
 body {
     font-family: Arial, sans-serif;
-    background-color:lavender;
+    background-color:#98A1A7;
+}
+#overdash
+{
+  margin-top:15px;
+}
+#left
+{
+  float:left;
+  width:8%;
+}
+#center
+{
+  float:left;
+  border-bottom:1px solid black;
+  width:72%;
+}
+#right
+{
+  float:left;
+width:20%;
+}
+
+#left img {
+  margin-left:5px;
+  width:90px;
+  height:90px;
+
+}
+#right img
+{
+  width:90px;
+  height:90px;
+
 }
 .contain {
   position: relative;
@@ -55,12 +88,9 @@ input[type=text] {
     border: 1px solid #ccc;
     box-sizing: border-box;
 }
-h2{
-	font-size: 24pt;
-	padding-bottom: 5px;
-	border-bottom: 5px solid black;
-}
+
 #entire-container{
+    padding-top:90px;
     width:100%;
 }
 #mySidenav
@@ -87,15 +117,15 @@ margin:8px;
   height:70px;
 }
 .avatar1{float:left;}
-.avatar2{float:left;border:3px solid black;margin-top:15px;}
+.avatar2{border:3px solid black;margin-top:15px;}
 .avatar3{float:left;}
 #myNotifications
 {
     width:20%;
+    float:right;
 }
 
 .sidenote {
-  float:left;
     height: 100%;
 
 }
@@ -110,9 +140,11 @@ margin:8px;
     color: #818181;
 }
 #notecore{
-  margin-top:100px;
+  float:left;
+  margin-top:0px;
+  width:20%;
 }
-#notecore h3
+#notecore h2
 {
   border-bottom:3px solid black;
 }
@@ -179,12 +211,12 @@ span.psw {
 }
 
 @-webkit-keyframes animatezoom {
-    from {-webkit-transform: scale(0)} 
+    from {-webkit-transform: scale(0)}
     to {-webkit-transform: scale(1)}
 }
-    
+
 @keyframes animatezoom {
-    from {transform: scale(0)} 
+    from {transform: scale(0)}
     to {transform: scale(1)}
 }
 
@@ -207,3 +239,36 @@ span.psw {
     text-align: right;
     padding-right: 5px;
 }
+.dropbtn {
+    margin-right:40px;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown {
+    float:right;
+
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 130px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown a:hover {background-color: #ddd}
+
+.show {display:block;}
