--- a/personal.css
+++ b/personal.css
@@ -1,8 +1,39 @@
 body {
     font-family: Arial, sans-serif;
-    background-color:teal;
+    background-color:#87959D;
+}
+#overdash
+{
+  margin-top:15px;
+}
+#left
+{
+  float:left;
+  width:8%;
+}
+#center
+{
+  float:left;
+  width:72%;
+}
+#right
+{
+  float:left;
+width:20%;
 }
 
+#left img {
+  margin-left:5px;
+  width:90px;
+  height:90px;
+  
+}
+#right img
+{
+  width:90px;
+  height:90px;
+  
+}
 #entire-container{
     width:100%;
 }
@@ -62,7 +93,7 @@ margin:0px;
 }
 
 .infoBox{
-  background-color: gray;
+  background-color: #DC965A;
   height: 30%;
   border: 2px solid #000000;
   line-height: 220%;
@@ -71,7 +102,7 @@ margin:0px;
 
 .infoBox2{
   margin-top: 8%;
-  background-color: gray;
+  background-color: #DC965A;
   height: 40%;
   border: 2px solid #000000;
   line-height: 220%;
@@ -124,3 +155,39 @@ span.psw {
     text-align: right;
     padding-right: 5px;
 }
+
+.dropbtn {
+    margin-right:40px;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+
+.dropdown {
+    float:right;
+
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 130px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown a:hover {background-color: #ddd}
+
+
+.show {display:block;}
