--- a/personal2.css
+++ b/personal2.css
@@ -1,8 +1,39 @@
 body {
     font-family: Arial, sans-serif;
-    background-color:tan;
+    background-color:#98A1A7;
+}
+#overdash
+{
+  margin-top:15px;
+}
+#left
+{
+  float:left;
+  width:8%;
+}
+#center
+{
+  float:left;
+  width:72%;
+}
+#right
+{
+  float:left;
+width:20%;
 }
 
+#left img {
+  margin-left:5px;
+  width:90px;
+  height:90px;
+  
+}
+#right img
+{
+  width:90px;
+  height:90px;
+  
+}
 #entire-container{
     width:100%;
 }
@@ -57,13 +88,12 @@ margin:0px;
     height:100%;
 }
 .dash img{
-    height:240px;
-    width:240px;
+    height:20px;
+    width:20px;
 }
 
 .infoBox{
-  margin-top: 8%;
-  background-color: gray;
+  background-color: #B1E5F2;
   height: 30%;
   border: 2px solid #000000;
   line-height: 220%;
@@ -72,7 +102,7 @@ margin:0px;
 
 .infoBox2{
   margin-top: 8%;
-  background-color: gray;
+  background-color: #B1E5F2;
   height: 40%;
   border: 2px solid #000000;
   line-height: 220%;
@@ -80,10 +110,13 @@ margin:0px;
 }
 
 .Personal-Information{
-  padding-left: 10px;
+  padding-left: 15px;
   font-size: 16pt;
 }
-
+.Personal-Information h2{
+  margin-bottom:0px;
+  margin-top:5px;
+}
 .infoBox-subtext{
   font-style: italic;
   font-size: 12pt;
@@ -122,3 +155,39 @@ span.psw {
     text-align: right;
     padding-right: 5px;
 }
+
+.dropbtn {
+    margin-right:40px;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+
+.dropdown {
+    float:right;
+
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 130px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown a:hover {background-color: #ddd}
+
+
+.show {display:block;}
