--- a/app.css
+++ b/app.css
@@ -1,16 +1,20 @@
 body {
-  font-family: "Times New Roman","Arial",sans-serif;
+  font-family: 'Karla', sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 20px;
   margin: 0;
   padding: 0;
-  background-color:#BC8F8F;
+  background-color: #C8C8C8;
 }
 
 #overdash
 {
   margin-top:15px;
+}
+
+.buttontext {
+  font-family: 'Montserrat', sans-serif;
 }
 
 #left
@@ -99,6 +103,8 @@ width:20%;
 
 	width:20%;
 }
+
+
 .text-editor{
  padding-top: 10px;
   padding-right: 28px;
@@ -110,6 +116,7 @@ width:20%;
   margin: 0 auto;
 }
 .text-editor textarea{
+  font-family: 'Montserrat', sans-serif;
   width:100%;
   height:95%;
 }
@@ -132,6 +139,7 @@ width:20%;
 }
 
 .dropdown-content {
+  font-family: 'Montserrat', sans-serif;
     display: none;
     position: absolute;
     background-color: #f1f1f1;
