--- a/app2.css
+++ b/app2.css
@@ -1,16 +1,21 @@
 body {
-  font-family: "Times New Roman","Arial",sans-serif;
+  font-family: 'Karla', sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 20px;
   margin: 0;
   padding: 0;
-  background-color:#3CB371;
+  background-color: #CECECE;
 }
 
 #overdash
 {
   margin-top:15px;
+    
+}
+
+.buttontext {
+  font-family: 'Montserrat', sans-serif;
 }
 
 #left
@@ -99,6 +104,7 @@ width:20%;
 
   width:20%;
 }
+
 .text-editor{
  padding-top: 10px;
   padding-right: 28px;
@@ -110,6 +116,7 @@ width:20%;
   margin: 0 auto;
 }
 .text-editor textarea{
+   font-family: 'Montserrat', sans-serif;
   width:100%;
   height:95%;
 }
@@ -128,6 +135,7 @@ width:20%;
 }
 
 .dropdown-content {
+    font-family: 'Montserrat', sans-serif;
     display: none;
     position: absolute;
     background-color: #f1f1f1;
