--- a/otheruser.css
+++ b/otheruser.css
@@ -1,6 +1,6 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color:#98A1A7;
+    font-family: 'Karla', sans-serif;
+    background-color:#f2efe9;
 }
 #overdash
 {
@@ -62,7 +62,7 @@ button:hover {
   width: 270px;
   opacity: 0;
   transition: .5s ease;
-  background-color: green;
+  background-color: #B1E5F2;
 }
 
 .contain:hover .overlay {
