--- a/userpage.css
+++ b/userpage.css
@@ -1,6 +1,6 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color:#87959D;
+    font-family: 'Karla', sans-serif;
+    background-color:#f2efe9;
 }
 #overdash
 {
@@ -62,7 +62,7 @@ button:hover {
   width: 270px;
   opacity: 0;
   transition: .5s ease;
-  background-color: green;
+  background-color: #bc8f8f;
 }
 
 .contain:hover .overlay {
@@ -125,10 +125,11 @@ margin:8px;
 }
 
 .sidenote {
- 
     height: 100%;
 
 }
+
+
 
 .contain{float:left;padding:15px;}
 .contain2{float:left;padding:15px;}
